Konvergenzpfeile geändert; Angefangen, subsubsection durch theorem umgebungen zu ersetzen

--- a/DefinitionTreppenfunktionQuader.tex
+++ b/DefinitionTreppenfunktionQuader.tex
@@ -1,4 +1,4 @@
-\subsection{Definition}
+\subsubsection{Definition}
 \begin{itemize}
 	\item Sei $D\subset \mathbb{R}^n$, dann heißt $\varphi \colon D \to \mathbb{R}$ Trerppenfunktion auf D, falls ein Quader $Q_1, Q_2,..., Q_l \subset \mathbb{R}^n$, paarweise disjunkt mit $\overline{D} \supset \bigcup_{i=1}^l \overline{Q_i}$ derart, dass $\varphi$ für jedes $i = 1,2,...,l$ konstant auf dem Quader $Q_i$ ist und $f(x) = 0$ für alle $x \in D \setminus \bigcup_{i=1}^l Q_i$
 	\item Das Integral obiger Treppenfunktion $\varphi \colon D \to \mathbb{R}$ ist definiert durch $\int_{D} \varphi(x) \text{d}x = \sum_{i= 1}^{l} \varphi(\xi_i)\mu(Q_i)$, wobei $\xi \in Q_i (i=1,...,l)$ beliebige Stützstellen sind.
