--- a/WiederholungMengen.tex
+++ b/WiederholungMengen.tex
@@ -1,4 +1,4 @@
-\subsection{Wiederholung: Abzählbare und endliche Mengen}
+\subsection*{Wiederholung: Abzählbare und endliche Mengen}
 \underline{Definition:}
 \begin{itemize}[noitemsep]
 	\item Zwei Mengen $A$ und $B$ heißen \underline{gleichmächtig}, falls eine bijektive Abbildung \mbox{$f: A\rightarrow B$} existiert.\\
@@ -98,7 +98,7 @@ $W_2 = \{a_1^{(0)}, a_1^{(1)}, a_2^{(1)}, a_1^{(2)}, a_2^{(2)}, a_3^{(2)}, a_4^{
 	\begin{equation*}
 		\begin{aligned}
 		f\colon \mathbb{R} &\to \, ]0,1[\\
-		x &\mapsto \frac{1}{\pi} (\arctan(x) + \frac{\pi}{2})
+		x &\mapsto \frac{1}{\pi} \left(\arctan(x) + \frac{\pi}{2}\right)
 		\end{aligned}
 	\end{equation*}
 	\raggedleft
