--- a/Ana3Einleitung.tex
+++ b/Ana3Einleitung.tex
@@ -1,8 +1,7 @@
 \documentclass[ngerman]{scrartcl}
 \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage{babel}
-\usepackage{lmodern}
+\usepackage[ngerman]{babel}
+\usepackage{lmodern} 
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage[amsmath,amsthm,thmmarks]{ntheorem}
@@ -17,6 +16,20 @@
 \newcommand{\RM}[1]{\MakeUppercase{\romannumeral #1{.}}}
 \newcommand{\integ}[2]{\int_#1 #2 \text{d}x}
 
+
+\theoremstyle{definition}
+\newtheorem{definition}[subsubsection]{Definition}
+
+\theoremstyle{definition}
+\newtheorem{proposition}[subsubsection]{Proposition}
+
+\theoremstyle{definition}
+\newtheorem{claim}[subsubsection]{Behauptung}
+\newtheorem*{claim_n}{Behauptung}
+
+\theoremstyle{remark}
+\newtheorem*{remark}{Bemerkung}
+
 \begin{document}
 \title{Analysis $\RM{3}$}
 
@@ -25,7 +38,6 @@
 \newpage
 
 \section{Lebesgue-Integration oder Gebietsintegrale im $\mathbb{R}^n$}
-
 \input{WiederholungMengen}
 \input{TopologieGrundbegriffe}
 \input{LebesgueNullmengen}
