--- a/Ana3Einleitung.tex
+++ b/Ana3Einleitung.tex
@@ -14,7 +14,7 @@
 \usepackage{stmaryrd}
 
 \newcommand{\RM}[1]{\MakeUppercase{\romannumeral #1{.}}}
-\newcommand{\integ}[2]{\int_#1 #2 \text{d}x}
+\newcommand{\integ}[2]{\int_#1 #2 \,\text{d}x}
 
 
 \theoremstyle{definition}
@@ -22,6 +22,7 @@
 
 \theoremstyle{definition}
 \newtheorem{proposition}[subsubsection]{Proposition}
+\newtheorem{satz}[subsubsection]{Satz}
 
 \theoremstyle{definition}
 \newtheorem{claim}[subsubsection]{Behauptung}
@@ -43,7 +44,6 @@
 \input{LebesgueNullmengen}
 \input{WiederholungRiemann}
 \input{LebesgueIntegral}
-\input{DefinitionTreppenfunktionQuader}
 
 
 \end{document}
